src/snapshots/rint__elaboration__tests__snapshot_ast.snap
---
source: src/elaboration.rs
expression: "format!(\"{ast}\")"
---
(program
  (fun_def int main [int x, bool flag]
    (block
      (declare result int
        (block
          (assign result ((flag ? (> x 0) : false) ? x : 0))
          (if (!= result 0)
            then (block
              (assign result (+ result 1))
            )
            else (block
              (assign result 1)
            ))
          (return result)
        ))
    ))
)
